--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
   			<% end %>
   		</div>
   		<ul>
-  			<li class="category">Website</li>
-  			<li><%= link_to "Ship", root_path %></li>
+  			<li class="category"></li>
+  			<li><%= link_to "Ship'", root_path %></li>
   			<li><%= link_to "Jobs", jobs_path %></li>
   			<li><%= link_to "Boats", boats_path %></li>
   		</ul>
@@ -25,7 +25,7 @@
   		<% if !user_signed_in? %>
 			<p class="sign_in"><%= link_to "Login", new_user_session_path %></p>
   		<% else %>
-  			<p class="sign_in"><%= current_user.user_name  %></p>  <br />
+  			<p class="sign_in">Welcome,  <%= current_user.user_name  %></p>  <br />
   			<!-- <p class="sign_in"><%= current_user.email  %></p> -->
 		<% end %>
   	</div>
