--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,32 +1,4 @@
-<h2>Add a Boat!</h2>
-
-
-<%= form_for @boat, url: boats_path, html: { multipart: true } do |f| %>
-<p>
-  <%= f.file_field :image %>
-</p>
-
-<p>
-	<%= f.label :name %><br>
-	<%= f.text_field :name %>
-</p>
-
-<p>
-	<%= f.label :max_load %><br>
-	<%= f.select :max_load, ["1-extra-small", "2-small", "3-medium", "4-large", "5-extra-large"] %>
-</p>
-
-<p>
-	<%= f.label :current_l %>
-	<%= f.select :current_l, ["Los Angeles", "Long Beach", "New York/New Jersey", "Seattle/Tacoma", "Savannah"] %>
-</p>
-
-<p>
-<%= f.submit %>
-</p>
-
-<% end %>
-
+<%= render "form" %>
 
 <h1>Current Boats</h1>
 
@@ -45,7 +17,7 @@
 		<td><%= boat.max_load %></td>
 		<td><%= boat.current_l %></td>
 		<td><%= link_to 'Description', boat_path(boat) %></td>
-		<td><%= link_to 'Edit', boat_path(boat) %></td>
+		<td><%= link_to 'Edit', edit_boat_path(boat) %></td>
 		<td><%= link_to 'Delete', boat, method: :delete %></td>
 	</tr>
 	<% end %>
