--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,33 +1,35 @@
 <div id="page_wrapper">
-	<%= form_for @job do |j| %>
-		<%= j.label :Job_Name %>
-		<%= j.text_field :job_name %>
-		<%= tag :br %>
+	<div id="content">
+		<%= form_for @job do |j| %>
+			<%= j.label :Job_Name %>
+			<%= j.text_field :job_name %>
+			<%= tag :br %>
 
-		<%= j.label :Job_description %>
-		<%= j.text_field :job_description %>
-		<%= tag :br %>
+			<%= j.label :Job_description %>
+			<%= j.text_field :job_description %>
+			<%= tag :br %>
 
-		<%= j.label :Container %>
-		<%= j.text_field :container %>
-		<%= tag :br %>	
+			<%= j.label :Container %>
+			<%= j.text_field :container %>
+			<%= tag :br %>	
 
-		<%= j.label :Cargo %>
-		<%= j.text_field :cargo %>
-		<%= tag :br %>
+			<%= j.label :Cargo %>
+			<%= j.text_field :cargo %>
+			<%= tag :br %>
 
-		<%= j.label :Cost %>
-		<%= j.text_field :cost %>
-		<%= tag :br %>
+			<%= j.label :Cost %>
+			<%= j.text_field :cost %>
+			<%= tag :br %>
 
-		<%= j.label :Origin %>
-		<%= j.text_field :origin %>
-		<%= tag :br %>
+			<%= j.label :Origin %>
+			<%= j.text_field :origin %>
+			<%= tag :br %>
 
-		<%= j.label :Destination %>
-		<%= j.text_field :destination %>
-		<%= tag :br %>
-		
-		<%= j.submit :update %>
-	<% end %>	
+			<%= j.label :Destination %>
+			<%= j.text_field :destination %>
+			<%= tag :br %>
+			
+			<%= j.submit :update %>
+		<% end %>	
+	</div>
 </div>
