--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,16 @@
 <div id="page_wrapper">
 	<div id="content">
-		
-		<h1>Home#index</h1>
-		<p>Find me in app/views/home/index.html.erb</p>
-	</div>
+		<% if !user_signed_in? %>
+			<p>Thank you for choosing Ship' Service!</p>
+			<p>In order to use the whole functionality, please sign-in!</p>
+			<button class="button"><%= link_to "Login", new_user_session_path %></button>
+		<% else %>	
+			<h1>Your Jobs</h1>	
+		<% end %>
 
+
+
+
+
+	</div>
 </div>
