--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,22 +1,15 @@
-<h1 id="header"> All jobs</h1>
+<div id="page_wrapper">
+	<div id="content">
+		<h1> All jobs</h1>
 
-	<% @jobs.each do |j| %>
-		<div class="post_wrapper">
-		<h2 class="title"><%= link_to j.job_name, job_path(j)%></h2>
-		Status: 
-		<%= j.status_job %>
-		<%= tag :br %>
-		Description: 
-		<%= j.job_description %>
-		<%= tag :br %>
-		Origin: 
-		<%= j.origin %>
-		<%= tag :br %>
-		Destination
-		<%= j.destination %>
-		<%= tag :br %>
-		<%= tag :br %>
-		<p class="date"><%= j.created_at.strftime("%B, %d, %Y") %></p>
-		</div>
-<% end %>
-
+			<% @jobs.each do |j| %>
+				<div class="post_wrapper">
+				<h2 class="title"><%= link_to j.job_name, job_path(j)%></h2>
+				Status: 
+				<%= j.status_job %>
+				<%= tag :br %>
+				<p class="date"><%= j.created_at.strftime("%B, %d, %Y") %></p>
+				</div>
+		<% end %>
+	</div>
+</div>
