--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -33,5 +33,5 @@
 		<%= tag :br %>
 	</div>
 	
-	<p class="date"><%= @job.created_at.strftime("%B, %d, %Y") %></p>
+	<p class="date_and_author"><%= @job.created_at.strftime("%B, %d, %Y") %></p>
 </div>
