--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,3 +1,5 @@
+<h2>Add a Boat!</h2>
+
 <%= render "form" %>
 
 <h1>Current Boats</h1>
@@ -6,7 +8,8 @@
 <% if @boats.blank? %>
 
 <div class="empty-state">
-	<h5>There are currently no boats available. Come back later.</h5>
+	<span class="fa fa-smile-o"></span>
+	<h5>There are currently no boats. Come back later.</h5>
 </div>
 
 <% else %>
@@ -24,8 +27,8 @@
 		<td><%= boat.name %></td>
 		<td><%= boat.max_load %></td>
 		<td><%= boat.current_l %></td>
-		<td><%= link_to 'Edit', edit_boat_path(boat) %></td>
-		<td><%= link_to 'Delete', boat, method: :delete %></td>
+		<td><%= link_to edit_boat_path(boat) do %><i class='fa fa-pencil'></i><% end %></td>
+		<td><%= link_to boat, method: :delete do %><i class='fa fa-trash-o'></i><% end %></td>
 	</tr>
 	<% end %>
 </table>
