--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -9,6 +9,9 @@
 			<%= j.text_field :job_description %>
 			<%= tag :br %>
 
+			<%= j.label :Status %><%= tag :br %>
+			<span class="dot" id="exampleDot"><span class="dot-inner"></span></span>
+
 			<%= j.label :Container %><%= tag :br %>
 			<%= j.text_field :container %>
 			<%= tag :br %>	
