added empty to jobs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -241,7 +241,7 @@ a {
 				line-height: 1.75;
 			}
 			a {
-				color: #33acb7;
+				color: #00008B;
 				font-weight: 700;
 				text-decoration: none;
 			}
