--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -23,6 +23,7 @@
 				<td><%= boat.name %></td>
 				<td><%= boat.max_load %></td>
 				<td><%= boat.current_l %></td>
+				<td><button>Select </button></td>
 				<td><%= link_to edit_boat_path(boat) do %><i class='fa fa-pencil'></i><% end %></td>
 				<td><%= link_to boat, method: :delete do %><i class='fa fa-trash-o'></i><% end %></td>
 			</tr>
