--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 					<button class="button"><%= link_to 'Delete', job_path(j), method: :delete, data: { confirm: 'Are you sure?' } %></button>
 
 					<button class="button"><%= link_to 'Edit', edit_job_path(j) %></button>
-
+					<button class="button"><%= link_to 'Assign boat', job_path(j) %></button>
 					Status: 
 					<%= j.status_job %>
 					<%= tag :br %>
