assign boat added

--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -15,6 +15,9 @@
 				<th>Name</th>
 				<th>Size</th>
 				<th>Current Location</th>
+				<th>Edit</th>
+				<th>Delete</th>
+				
 			</tr>
 
 			<% @boats.each do |boat| %>
