assign job/id page modified

--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,5 +1,6 @@
 <div id="page_wrapper">
 	<div id="content">
+		<div class="post_wrapper">
 		<h1>Current Boats</h1>
 		<% if @boats.blank? %>
 
@@ -33,5 +34,6 @@
 			<% end %>
 		</table>
 		<% end %>
+		</div>
 	</div>
 </div>
