--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,13 @@
   	</div>
   	<div id="main_content">
   		<div id="header">
-  			
+  			<% if current_page?(root_path) %>
+       <p>All Jobs</p>
+       <% elsif current_page?(jobs_path) %>
+       <p>Jobs</p>
+       <% else %>
+       <%= link_to "Back to All Jobs", root_path %>
+       <% end %>
   			
   			<% if user_signed_in? %>
 				<div class="buttons">
