--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -29,6 +29,9 @@
 					<% if j.id == boatjob.job_id  %>
 						<li>
 						<%= Boat.where(["id = ? ", boatjob.boat_id]).first.name %>
+						<% if j.user_id == current_user.id %>
+						<%= link_to boatsjob_path(boatjob), method: :delete do %><i class='fa fa-trash-o'></i><% end %>
+						<%end %>
 						</li>
 					<% end %>
 				<% end %>
